packages/react-components/src/components/tabs/tabs.module.css
@layer components {
  .Tabs {
    max-width: 100%;
  }

  .List {
    --separator-size: 2px;

    white-space: nowrap;
    overflow-x: auto;
    scrollbar-width: none;
    padding: token(--space-4);
    background: var(--vibrancy-background-soft);
    border-radius: token(--radius-16);
    box-shadow: 0 0 0 1px var(--global-outer-contrast-border), inset 0 0 0 1px var(--global-inner-contrast-border);

    .Tabs[data-tabs-dimension='small'] & {
      border-radius: calc(token(--radius-8) + token(--radius-4));
    }

    .Tabs[data-tabs-dimension='big'] & {
      border-radius: token(--radius-24);
    }

    &::-webkit-scrollbar {
      display: none;
    }

    &::-webkit-scrollbar-track {
      background: transparent;
    }

    &::-webkit-scrollbar-thumb {
      background-color: transparent;
      border-radius: 6px;
      border: 3px solid transparent;
    }
  }

  .Label {
    position: relative;

    .Trigger[data-state='active'] & {
      color: var(--cta-default);
    }
  }

  .Highlight {
    --transparency: calc(var(--shadow-opacity-factor) * 2);

    position: absolute;
    z-index: -1;
    inset: 0;
    background: color-mix(in oklch, var(--vibrancy-background-hard), transparent 50%);
    pointer-events: none;
    box-shadow: 0 0 0 1px var(--global-outer-contrast-border), inset 0 0 0 1px var(--global-inner-contrast-border);
    border-radius: calc(token(--radius-8) + token(--radius-4));

    .Tabs[data-tabs-dimension='small'] & {
      border-radius: calc(token(--radius-16) - token(--radius-4) - 2px);
      inset: -2px;
    }

    .Tabs[data-tabs-dimension='big'] & {
      border-radius: calc(token(--radius-16) + token(--radius-4));
    }
  }

  .Panel {
    animation: fade-in token(--duration-200) ease-in-out;
  }

  @keyframes fade-in {
    from {
      opacity: 0%;
    }

    to {
      opacity: 100%;
    }
  }
}
@layer overrides {
  .Trigger {
    overflow: unset;
    z-index: 0;
    outline-offset: calc((var(--separator-size) * 2) * -1);


    &.Trigger:not([aria-disabled='true']):is(:hover, :focus, :active) {
      background: none;
      color: var(--global-foreground);
      backdrop-filter: none;
    }

    &.Trigger[aria-disabled='true'] {
      background: none;
      color: var(--global-disabled-foreground);
      backdrop-filter: none;
    }
  }
}

